<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/lblAppName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo_bhai_2_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/yellow1"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAppName1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <TextView
            android:id="@+id/lblLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/loginacc_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="60dp"
            android:ems="9"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="8dp"
            android:ems="9"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/mbutton"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@color/button_bg_1" />

        <TextView
            android:id="@+id/lblSignupAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:textSize="16sp"
            android:text="@string/signup_here"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/pbLogin"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>