<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblAppName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo_bhai_2_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/yellow1"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAppName3">

        <LinearLayout
            android:id="@+id/llIonizing"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/linear_layout_bg_round"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivIonizing"
                android:clickable="false"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/measure_ionizing_radiation"
                app:srcCompat="@drawable/nuclear_image" />

            <TextView
                android:id="@+id/lblIonizing"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ionizing"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llNonIonizing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/linear_layout_bg_round"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivNonIonizing"
                android:clickable="false"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:contentDescription="@string/measure_non_ionizing_radiation"
                app:srcCompat="@drawable/radiofrequency_image" />

            <TextView
                android:id="@+id/lblNonIonizing"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_ionizing"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/mbutton"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:padding="0sp"
        app:backgroundTint="@color/red1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>