<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".IonizingRadiationActivity">

    <TextView
        android:id="@+id/lblAppName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo_bhai_2_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/yellow1"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/mbutton"
        android:padding="0sp"
        android:text="@string/connect"
        android:textColor="@color/yellow1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/button_bg_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAppName4" />

    <LinearLayout
        android:id="@+id/llStartStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="38dp"
        android:paddingStart="38dp"
        android:background="@drawable/linear_layout_bg_round"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivStartStop"
            android:clickable="false"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/nuclear_image"
            android:contentDescription="@string/start_measurement" />

        <TextView
            android:id="@+id/lblStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbBtc"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/llStartStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblGeigerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/llStartStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>