<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".NonIonizingRadiationActivity">

    <TextView
        android:id="@+id/lblAppName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo_bhai_2_extrabold"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/yellow1"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llStartStop2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="36dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="38dp"
        android:paddingStart="38dp"
        android:background="@drawable/linear_layout_bg_round"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivStartStop2"
            android:clickable="false"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/radiofrequency_image"
            android:contentDescription="@string/start_measurement" />

        <TextView
            android:id="@+id/lblStartStop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/llStartStop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>